added Dto and automapper support

--- a/CAcore/CAcore.csproj
+++ b/CAcore/CAcore.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>53a2e53d-05af-4bc8-8f3c-294fc1eda8bd</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
