change cert store to root, added cert path to appsettings.json

--- a/CAcore/appsettings.json
+++ b/CAcore/appsettings.json
@@ -1,3 +1,11 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/home/radwa/web-app-cert/localhost.pfx",
+        "Password": "foobar"
+      }
+    }
+  }
 }
