--- a/CAwebapp/appsettings.json
+++ b/CAwebapp/appsettings.json
@@ -7,5 +7,13 @@
     }
   },
   "AllowedHosts": "*",
-  "WebAPIBaseUrl": "https://localhost:5001" 
+  "WebAPIBaseUrl": "https://localhost:5001",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/home/radwa/web-app-cert/localhost.pfx",
+        "Password": "foobar"
+      }
+    }
+  }
 }
