removing the private key from the response

--- a/CAcore/appsettings.json
+++ b/CAcore/appsettings.json
@@ -1,11 +1,3 @@
 {
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "/home/radwa/web-app-cert/localhost.pfx",
-        "Password": "foobar"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
