--- a/CAwebapp/appsettings.json
+++ b/CAwebapp/appsettings.json
@@ -7,13 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "WebAPIBaseUrl": "https://localhost:5001",
-  "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "/home/radwa/web-app-cert/localhost.pfx",
-        "Password": "foobar"
-      }
-    }
-  }
+  "WebAPIBaseUrl": "https://localhost:5001"
 }
